--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subir Imagen</title>
+    <title>Análise de Imagens</title>
     <link rel="stylesheet" href="assets/styles.css">   
 </head>
 
@@ -19,20 +19,21 @@
         </div>
     </header>
 <div class="content">
-    <label for="input-file" id="drop-area">
-        <input type="file" accept="image/*" id="input-file" hidden>
+    <label for="input-file" id="drop-area" draggable="true">
+        <input type="file" accept="image/*" id="input-file" hidden onchange="fileSelected(event)"/>
         <div  id="img-view">
             <img src="assets/img/cloud-upload-regular-180.png" alt="">
             <p>Arraste e solte <br> ou <br>clique aqui para carregar a imagem</p>
             <span>Carregue qualquer imagem do computador</span>
         </div>
-    
-        <button type="button" onclick="uploadImage()">Análise de imagens</button>
+        <button type="button" id="upload-btn"  onclick="uploadImage()">Análise de imagens</button>
     </label>   
 </div>
 
-<script src="assets/app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aws-sdk@2.1027.0/dist/aws-sdk.min.js"></script>
+<script src="assets/aws_config.js"></script>
+<script src="assets/app.js"></script>
+
 
 
 <footer>
