--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Arraste e solte <br> ou <br>clique aqui para carregar a imagem</p>
             <span>Carregue qualquer imagem do computador</span>
         </div>
-        <button type="button" id="upload-btn"  onclick="uploadImage()">Análise de imagens</button>
+        <button type="button" id="upload-btn"  onclick="uploadImage()">Analisar Imagen</button>
     </label>   
 </div>
 
