--- a/equipo.html
+++ b/equipo.html
@@ -32,7 +32,7 @@
             <div class="description">
                 <h3>Fabiana Russo</h3>
                 <h4>Developer FullStack</h4>
-                <p>Sou graduada em análise e desenvolvimento de sistemas.</p>
+                <p>Sou graduada em Análise e Desenvolvimento de Sistemas.</p>
             </div>
             <div class="contact">
                 <a href="https://www.linkedin.com/in/fabiana-russo/" target="_blank"><img src="assets/img/linkedin-square-logo-60.png"></a>
@@ -49,8 +49,8 @@
             </div>
             <div class="description">
                 <h3>Samuel Leal</h3>
-                <h4>Estudiante</h4>
-                <p>Sou estudante de Análise e Desenvolvimento de Sistemas</p>
+                <h4>Técnico em Redes de Computadores</h4>
+                <p>Cursando Análise e Desenvolvimento de Sistemas na Universidade Salvador UNIFACS.</p>
             </div>
             <div class="contact">
                 <a href="https://www.linkedin.com/in/samuel-leal-santos-8642599/" target="_blank"><img src="assets/img/linkedin-square-logo-60.png"></a>
@@ -66,9 +66,9 @@
                 </div>
             </div>
             <div class="description">
-                <h3>Esuardo Santos</h3>
+                <h3>Eduardo Santos</h3>
                 <h4>Estudiante</h4>
-                <p> Estou cursando o 4º período da faculdade e estagiando na área de suporte técnico.</p>
+                <p> Estou cursando o 4º período da faculdade e estagiando na área de Suporte Técnico.</p>
             </div>
             <div class="contact">
                 <a href="https://www.linkedin.com/in/eduardo-s-840204206/" target="_blank"><img src="assets/img/linkedin-square-logo-60.png"></a>
@@ -80,17 +80,17 @@
                 <div class="head">
                     <div class="circle">
                         <div class="img">
-                            <img src="" alt="">
+                            <img src="assets/img/Fernando Conrado.jpeg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="description">
                     <h3>Fernando Conrado</h3>
-                    <h4>Estudiante</h4>
-                    <p>djd dhfduhf lhfldugf ldfdlsiugfd ldj duhfidh fifiudf diufh udsif digfdug diugfiudgf diusfdigduig dugf disugfdisugsdi disgfiudsgfdiufg f</p>
+                    <h4>Desenvolvedor</h4>
+                    <p>Programador Web/Gestor de Tecnologia da Informação</p>
                 </div>
                 <div class="contact">
-                    <a href="https://github.com/Devopiajiu"><img src="assets/img/github-logo-60.png"></a>
+                    <a href="https://www.linkedin.com/in/fernando-conrado-286535281/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="assets/img/linkedin-square-logo-60.png"></a>
             </div>
             </div>
     
@@ -98,17 +98,17 @@
                 <div class="head">
                     <div class="circle">
                         <div class="img">
-                            <img src="" alt="">
+                            <img src="assets/img/Salvador Lima.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="description">
-                    <h3>Salvador Pereira</h3>
-                    <h4>Estudiante</h4>
-                    <p>djd dhfduhf lhfldugf ldfdlsiugfd lf</p>
+                    <h3>Salvador Lima Junior</h3>
+                    <h4>Analista de processos</h4>
+                    <p>MBA Gestão de Projetos USP</p>
                 </div>
                 <div class="contact">
-                    <a href="#"><img src="assets/img/linkedin-square-logo-60.png"></a>
+                    <a href="https://www.linkedin.com/in/salvador-lima-junior-5a657b165/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="assets/img/linkedin-square-logo-60.png"></a>
             </div>
             </div>
     
@@ -123,6 +123,7 @@
                 <div class="description">
                     <h3>Tatiana Varona</h3>
                     <h4>Técnica na Especialidade de Informática</h4>
+                    <p>Eu sou apaixonada pelo mundo das tecnologias</p>
                 </div>
                 <div class="contact">
                     <a href="https://github.com/Tativv" target="_blank"><img src="assets/img/github-logo-60.png"></a>
